--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx src/server.ts",
     "build": "tsup src",
-    "start": "node dist/server.js"
+    "start": "node dist/aula.html"
   },
   "keywords": [],
   "author": "",
